# language-ninja

./: .gitignore  flake.nix  language-ninja.cabal  language-ninja.nix
tests/: Tests.hs
tests/Tests/: Orphans.hs
