cabal-version:            3.0
name:                     language-ninja
version:                  0.3.0
stability:                Experimental
copyright:                Copyright 2017 Awake Security
author:                   Awake Security
maintainer:               Las Safin <me@las.rs>
license:                  Apache-2.0
license-file:             LICENSE.md
homepage:                 https://github.com/L-as/language-ninja
bug-reports:              https://github.com/L-as/language-ninja/issues
category:                 Build, Language
synopsis:                 A library for dealing with the Ninja build language.
description:              A Haskell library for parsing, pretty-printing, and
                          compiling the Ninja build language.
                          The best place to start reading this documentation is
                          the "Language.Ninja" module.
extra-source-files:       README.md
                        , CHANGELOG.md

source-repository head
    type:                 git
    branch:               master
    location:             https://github.com/L-as/language-ninja.git

common c
  build-depends:
    , base >= 4.8 && <5
    , aeson >= 1.5
    , flow >= 1.0
    , lens ^>= 4.19
    , mtl ^>= 2.2
    , text >= 1.2
    , transformers >= 0.5 && <= 0.7
  default-language:     Haskell2010
  other-extensions:
    CPP
    DataKinds
    DeriveGeneric
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    GADTs
    GADTSyntax
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    PatternGuards
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wmissing-export-lists -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds
    -O2

library
  import: c
  hs-source-dirs:       library
  build-depends:
    bytestring >= 0.10 && < 0.11,
    containers ^>= 0.6,
    deepseq >= 1.4 && < 1.5,
    hashable ^>= 1.3,
    intern >= 0.9 && < 0.10,
    megaparsec ^>= 9.0,
    QuickCheck ^>= 2.14,
    semigroups ^>= 0.19,
    smallcheck ^>= 1.2,
    system-filepath >= 0.4 && < 0.5,
    unordered-containers ^>= 0.2 && < 0.3,
    versions ^>= 5.0
  exposed-modules:
    Language.Ninja
    Language.Ninja.Compile
    Language.Ninja.Lexer
    Language.Ninja.Lexer.Types
    Language.Ninja.Parser
    Language.Ninja.Pretty
    Language.Ninja.Tutorial
    Language.Ninja.AST
    Language.Ninja.AST.Build
    Language.Ninja.AST.Deps
    Language.Ninja.AST.Env
    Language.Ninja.AST.Expr
    Language.Ninja.AST.Ninja
    Language.Ninja.AST.Rule
    Language.Ninja.IR
    Language.Ninja.IR.Build
    Language.Ninja.IR.Meta
    Language.Ninja.IR.Ninja
    Language.Ninja.IR.Pool
    Language.Ninja.IR.Rule
    Language.Ninja.IR.Target
    Language.Ninja.Errors
    Language.Ninja.Errors.Compile
    Language.Ninja.Errors.Parser
    Language.Ninja.Mock
    Language.Ninja.Mock.ReadFile
    Language.Ninja.Misc
    Language.Ninja.Misc.Annotated
    Language.Ninja.Misc.Command
    Language.Ninja.Misc.IText
    Language.Ninja.Misc.Located
    Language.Ninja.Misc.Path
    Language.Ninja.Misc.Positive

test-suite tests
  import: c
  build-depends:
    , language-ninja
    , aeson-pretty ^>= 0.8
    , optparse-generic ^>= 1.4.7
  ghc-options: -threaded
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Tests.hs
  other-modules:
    Tests.Mock
    Tests.Orphans
    Tests.ReferenceLexer
    Tests.ReferenceLexer.Str0
  build-depends:        language-ninja
    , bytestring
    , containers
    , hashable
    , monad-mock >= 0.2
    , QuickCheck
    , quickcheck-instances >= 0.3 && < 0.4
    , semigroups
    , smallcheck
    , system-filepath
    , tasty ^>= 1.4
    , tasty-html ^>= 0.4
    , tasty-hunit ^>= 0.10
    , tasty-quickcheck ^>= 0.10
    , tasty-smallcheck ^>= 0.8
    , text
    , turtle ^>= 1.5
    , unordered-containers >= 0.2 && < 0.3
    , versions
